[package]
name = "chirp-auth-client"
version = "0.3.0"
edition = "2021"
description = "Shared client-side verifier for ChirpAuth-issued ID tokens."
license = "MIT OR Apache-2.0"
repository = "https://github.com/coreygirard/chirp-auth-client"
documentation = "https://docs.rs/chirp-auth-client"
readme = "README.md"
keywords = ["oidc", "jwt", "auth", "chirp-auth"]
categories = ["authentication", "web-programming"]

[dependencies]
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["std"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
