[package]
name = "chirp-auth-client"
version = "0.6.0"
edition = "2021"
description = "Shared client-side verifier for ChirpAuth-issued ID tokens."
license = "MIT OR Apache-2.0"
repository = "https://github.com/coreygirard/chirp-auth-client"
documentation = "https://docs.rs/chirp-auth-client"
readme = "README.md"
keywords = ["oidc", "jwt", "auth", "chirp-auth"]
categories = ["authentication", "web-programming"]

[dependencies]
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["std"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net", "io-util"] }
# Test-only: mint signed tokens + serve a JWKS to exercise the verify path
# end-to-end (the existing test module only covered malformed-shortcut
# paths that never reached the JWKS fetch or signature check).
rsa = { version = "0.9", default-features = false, features = ["sha2", "std"] }
sha2 = "0.10"
rand = "0.8"
